# agentic-research-system

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
config/: agent_config.yaml  cache_config.yaml  logging_config.yaml  mcp_config.yaml  model_config.yaml  prompts.yaml  settings.py
examples/: deep_research.py
src/: app.py
src/agents/: manager_agent.py  researcher_agent.py  router_agent.py
src/cache/: clear_cache.py  data_extractor.py  semantic_cache.py
src/core/: graph.py  state.py
src/eval/: __init__.py  llm.py
src/mcp/: client.py
src/mcp/servers/: arxiv_server.py  brave_server.py  firecrawl_server.py  tavily_server.py
src/memory/: long_term_memory.py  short_term_memory.py
src/utils/: logger.py  observability.py
tests/: eval_agent_quality.py  eval_e2e_system.py  eval_semantic_cache.py  eval_single_query.py  test_cache.py  test_cache_filters.py  test_mcp_tools.py
